accessibility: increase contrast on toy links in reviews. Issue: #33

--- a/toy_tribe/static/css/style.css
+++ b/toy_tribe/static/css/style.css
@@ -445,6 +445,10 @@ main {
     height: auto;
 }
 
+.toy-reviewed p a {
+    color: blue;
+}
+
 .profile-review-content {
     max-height: 200px;
     overflow: auto;
